# reverse-search

./: CMakeLists.txt  Makefile  README.md
dsa/: dsa_errno.h  trie.h
dsa/src/: trie.c
include/: display_history.h  parse_history.h  transfer_history.h
src/: display_history.c  main.c  parse_history.c  transfer_history.c
